--- a/LlamaParse_pdf_RAG/llamaParse_demo.ipynb
+++ b/LlamaParse_pdf_RAG/llamaParse_demo.ipynb
@@ -1140,14 +1140,14 @@
       "cell_type": "code",
       "source": [
         "llm = AzureAICompletionsModel(\n",
-        "    endpoint=\"https://ai-depoc1aihub1643128651037.openai.azure.com/openai/deployments/gpt-4o\",\n",
-        "    credential=\"EcpnZTlxYcDNtgfui7mWYS0JeTWJPlNXJEaILe2fwF6dftfTBqYLJQQJ99ALACYeBjFXJ3w3AAAAACOGXsqG\",\n",
+        "    endpoint=\"https://.openai.azure.com/openai/deployments/gpt-4o\",\n",
+        "    credential=\"EcG\",\n",
         "    api_version=\"2024-08-01-preview\",\n",
         ")\n",
         "\n",
         "embed_model = AzureAIEmbeddingsModel(\n",
-        "    endpoint=\"https://ai-depoc1aihub1643128651037.openai.azure.com/openai/deployments/text-embedding-3-small\",\n",
-        "    credential=\"EcpnZTlxYcDNtgfui7mWYS0JeTWJPlNXJEaILe2fwF6dftfTBqYLJQQJ99ALACYeBjFXJ3w3AAAAACOGXsqG\",\n",
+        "    endpoint=\"https://.openai.azure.com/openai/deployments/text-embedding-3-small\",\n",
+        "    credential=\"\",\n",
         "    model_name=\"text-embedding-3-small\",\n",
         ")\n",
         "Settings.llm = llm\n",
